fixed typo removed section #

--- a/index.ipynb
+++ b/index.ipynb
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "## Introduction\n",
-    "This lesson summarizes the topics we'll be covering in section 26 and why they'll be important to you as a data scientist."
+    "In this section, you'll learn about Linear Algebra and why it is important to its fundamentals as a data scientist."
    ]
   },
   {
@@ -59,9 +59,9 @@
     "\n",
     "One of the main reasons that NumPy is the default mechanism that most data scientists use for storing and transforming data within Python (as opposed to native Lists and Dictionaries) is its computational efficiency. By getting you to calculate dot-products for modestly sized matrices, you get to experience the difference in performance between NumPy and raw Python data types.\n",
     "\n",
-    "### Solving Systems of Linear Equiations using NumPy\n",
+    "### Solving Systems of Linear Equations using NumPy\n",
     "\n",
-    "We then bring the previous work together to look at how to use NumPy to solve systems of linear equiations, introducing the identity and inverse matrices along the way.\n",
+    "We then bring the previous work together to look at how to use NumPy to solve systems of linear equations, introducing the identity and inverse matrices along the way.\n",
     "\n",
     "\n",
     "### Regression Analysis Using Linear Algebra and NumPy\n",
@@ -101,7 +101,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
